signup form done

--- a/front/public/components/signup/signup.html
+++ b/front/public/components/signup/signup.html
@@ -5,25 +5,30 @@
     <span id="username-error" class=""></span>
   </div>
   <div class="mb-3 col-md-6 m-auto">
+    <label for="adress" class="form-label">Adress</label>
+    <input type="text" class="form-control" id="adress" >
+    <span id="adress-error" class=""></span>
+  </div>
+  <div class="mb-3 col-md-6 m-auto">
     <label for="email" class="form-label">Email</label>
     <input type="email" class="form-control" id="email" >
     <span id="email-error" class=""></span>
   </div>
-  <div class="mb-3 col-md-6 m-auto">
+  <div class="mb-3 col-md-6 m-auto" id="password-block">
     <label for="password" class="form-label">Password</label>
     <input type="password" class="form-control" id="password">
   </div>
   <div class="mb-3 col-md-6 m-auto">
     <label for="password-confirmation" class="form-label">Password confirmation</label>
     <input type="password" class="form-control" id="password-confirmation" >
-    <span id="email-confirmation-error" class=""></span>
+    <span id="password" class=""></span>
   </div>
   <div class="mb-3 col-md-6 m-auto">
-    <input type="checkbox" class="form-check-input" id="agreement">
-    <label class="form-check-label" for="agreement">Check me out</label>
+    <input type="checkbox" class="form-check-input" id="agreementCheckbox">
+    <label for="agreementCheckbox">I agree to the <a href="#" target="_blank">Terms and Conditions</a> and <a href="#" target="_blank">Privacy Policy</a>.</label>
   </div>
   <div class="col-md-6 m-auto">
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="button" class="btn btn-primary" id="btn-signup">Submit</button>
   </div>
 </form>
 
