--- a/front/public/components/login/login.html
+++ b/front/public/components/login/login.html
@@ -1,4 +1,4 @@
-<form class="signup-form mt-5 pt-5">
+<form class="login-form mt-5 pt-5">
   <div class="mb-3 col-md-6 m-auto">
     <label for="username" class="form-label">Username</label>
     <input type="text" class="form-control" id="username" aria-describedby="">
