--- a/front/public/components/login/login.html
+++ b/front/public/components/login/login.html
@@ -1,17 +1,34 @@
-<form class="signup-form mt-5 pt-5">
-  <div class="mb-3 col-md-6 m-auto">
+<form class="login-form mt-3 mb-3">
+  <div class="mb-3 col-md-11 m-auto">
     <label for="username" class="form-label">Username</label>
     <input type="text" class="form-control" id="username" aria-describedby="">
     <span id="username-error" class=""></span>
   </div>
-  <div class="mb-3 col-md-6 m-auto">
+  <div class="mb-3 col-md-11 m-auto">
     <label for="password" class="form-label">Password</label>
     <input type="password" class="form-control" id="password">
   </div>
-  <div class="col-md-6 m-auto">
-    <button type="submit" class="btn btn-primary">Log in</button>
+  <div class="col-md-11 m-auto">
+    <button type="button" class="btn btn-success">Login</button>
+    <span>
+      Don't have an account? <a href="/register">Register</a>
+    </span>
   </div>
 </form>
 
 <style>
+  span {
+    float: right;
+    a {
+      color: white;
+    }
+  }
+  .login-container {
+    margin: auto;
+    width: 380px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);  
+    padding: 0;
+  }
 </style>
