--- a/front/public/components/signup/signup.html
+++ b/front/public/components/signup/signup.html
@@ -1,36 +1,44 @@
-<form class="signup-form mt-2">
-  <div class="mb-3 col-md-6 m-auto">
+<form class="signup-form mt-3 mb-3">
+  <div class="mb-3 col-md-11 m-auto">
     <label for="username" class="form-label">Username</label>
     <input type="text" class="form-control" id="username">
     <span id="username-error" class=""></span>
   </div>
-  <div class="mb-3 col-md-6 m-auto">
+  <div class="mb-3 col-md-11 m-auto">
     <label for="adress" class="form-label">Adress</label>
     <input type="text" class="form-control" id="adress" >
     <span id="adress-error" class=""></span>
   </div>
-  <div class="mb-3 col-md-6 m-auto">
+  <div class="mb-3 col-md-11 m-auto">
     <label for="email" class="form-label">Email</label>
     <input type="email" class="form-control" id="email" >
     <span id="email-error" class=""></span>
   </div>
-  <div class="mb-3 col-md-6 m-auto" id="password-block">
+  <div class="mb-3 col-md-11 m-auto" id="password-block">
     <label for="password" class="form-label">Password</label>
     <input type="password" class="form-control" id="password">
   </div>
-  <div class="mb-3 col-md-6 m-auto">
+  <div class="mb-3 col-md-11 m-auto">
     <label for="password-confirmation" class="form-label">Password confirmation</label>
     <input type="password" class="form-control" id="password-confirmation" >
     <span id="password" class=""></span>
   </div>
-  <div class="mb-3 col-md-6 m-auto">
+  <div class="mb-3 col-md-11 m-auto">
     <input type="checkbox" class="form-check-input" id="agreementCheckbox">
     <label for="agreementCheckbox">I agree to the <a href="#" target="_blank">Terms and Conditions</a> and <a href="#" target="_blank">Privacy Policy</a>.</label>
   </div>
-  <div class="col-md-6 m-auto">
-    <button type="button" class="btn btn-primary" id="btn-signup">Submit</button>
+  <div class="col-md-11 m-auto">
+    <button type="button" class="btn btn-success" id="btn-signup">Register</button>
   </div>
 </form>
 
 <style>
+  .signup-container {
+    margin: auto;
+    width: 380px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);  
+    padding: 0;
+  }
 </style>
