--- a/front/public/components/login/login.html
+++ b/front/public/components/login/login.html
@@ -1,15 +1,15 @@
 <form class="login-form mt-3 mb-3">
   <div class="mb-3 col-md-11 m-auto">
     <label for="username" class="form-label">Username</label>
-    <input type="text" class="form-control" id="username" aria-describedby="">
+    <input type="text" class="form-control" id="username-from-login" aria-describedby="">
     <span id="username-error" class=""></span>
   </div>
   <div class="mb-3 col-md-11 m-auto">
     <label for="password" class="form-label">Password</label>
-    <input type="password" class="form-control" id="password">
+    <input type="password" class="form-control" id="password-from-login">
   </div>
   <div class="col-md-11 m-auto">
-    <button type="button" class="btn btn-success">Login</button>
+    <button type="button" class="btn btn-success" id="login-btn">Login</button>
     <span>
       Don't have an account? <a href="/register">Register</a>
     </span>
