feat(auth): managed user session

--- a/front/public/components/signup/signup.html
+++ b/front/public/components/signup/signup.html
@@ -1,5 +1,15 @@
 <form class="signup-form mt-3 mb-3">
   <div class="mb-3 col-md-11 m-auto">
+    <label for="first-name" class="form-label">First Name</label>
+    <input type="text" class="form-control" id="first-name">
+    <span id="first-name" class=""></span>
+  </div>
+  <div class="mb-3 col-md-11 m-auto">
+    <label for="last-name" class="form-label">Last Name</label>
+    <input type="text" class="form-control" id="last-name">
+    <span id="last-name" class=""></span>
+  </div>
+  <div class="mb-3 col-md-11 m-auto">
     <label for="username" class="form-label">Username</label>
     <input type="text" class="form-control" id="username">
     <span id="username-error" class=""></span>
@@ -25,7 +35,7 @@
   </div>
   <div class="mb-3 col-md-11 m-auto">
     <input type="checkbox" class="form-check-input" id="agreementCheckbox">
-    <label for="agreementCheckbox">I agree to the <a href="#" target="_blank">Terms and Conditions</a> and <a href="#" target="_blank">Privacy Policy</a>.</label>
+    <label for="agreementCheckbox">I agree to the <a href="#" target="_blank">Terms and Conditions</a> and <a href="#" target="_blank">Privacy Policy</a></label>
   </div>
   <div class="col-md-11 m-auto">
     <button type="button" class="btn btn-success" id="btn-signup">Register</button>
